[gd_scene load_steps=2 format=3 uid="uid://statue_select001"]

[ext_resource type="Script" path="res://scripts/ui/statue_selection_ui.gd" id="1_script"]

[node name="StatueSelectionUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 0.95)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -320.0
offset_right = 550.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "⚔️ Choose Your Guardian ⚔️"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Select a statue to begin your defense"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="StatuesGrid" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Footer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(180, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "← Back to Menu"

[node name="ConfirmButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "✓ Confirm Selection"
